[package]
name = "study-kibi"
version = "0.1.0"
authors = ["chylli-binary <chylli@binary.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/chylli-team/study-kibi"
readme = "README.md"
keywords = ["editor", "terminal", "text-editor"]
categories = ["algorithms", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.16"
#signal-hook = "0.1"
